Lmdb KV store